<resources>
    <string name="app_name">Guessgame</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="enter_number">Enter number</string>
    <string name="back">Back</string>
    <string name="check">Check</string>
    <string name="choose_lower">Choose Lower limit</string>
    <string name="choose_upper">Choose Upper limit</string>
    <string name="_0">0</string>
    <string name="setNum">Set Number</string>
</resources>