<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.user.guessgameapp.MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/dLower"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:gravity="center_vertical|center"
            android:text="@string/lower_limit"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/vLower"
            android:layout_width="222dp"
            android:layout_height="62dp"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/dUpper"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.56"
            android:gravity="center_vertical|center"
            android:text="@string/upper_limit"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/vUpper"
            android:layout_width="222dp"
            android:layout_height="68dp"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/backButton"
            style="@android:style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backClicked"
            android:text="@string/setNum"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>

